--- a/webapps/ROOT/WEB-INF/web.xml
+++ b/webapps/ROOT/WEB-INF/web.xml
@@ -22,9 +22,14 @@
   version="4.0"
   metadata-complete="true">
 
-  <display-name>Welcome to Tomcat</display-name>
-  <description>
-     Welcome to Tomcat
-  </description>
-
+  <display-name>My web app</display-name>
+  <filter>
+    <filter-name>AccessFilter</filter-name>
+    <filter-class>filters.AccessFilter</filter-class>
+  </filter>
+  
+  <filter-mapping>
+    <filter-name>AccessFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
