--- a/webapps/ROOT/WEB-INF/web.xml
+++ b/webapps/ROOT/WEB-INF/web.xml
@@ -25,11 +25,21 @@
   <display-name>My web app</display-name>
   <filter>
     <filter-name>AccessFilter</filter-name>
-    <filter-class>filters.AccessFilter</filter-class>
+    <filter-class>FamilyTask.filters.AccessFilter</filter-class>
   </filter>
   
   <filter-mapping>
     <filter-name>AccessFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+
+  <servlet>
+    <servlet-name>LoginServlet</servlet-name>
+    <servlet-class>FamilyTask.servlets.LoginServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>LoginServlet</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
 </web-app>
