--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,8 +6,10 @@
         {
             "label": "startup",
             "dependsOn": [
+                "compile_classes",
                 "run"
-            ]
+            ],
+            "dependsOrder": "sequence"
         },
         {
             "label": "run",
@@ -17,7 +19,20 @@
         {
             "label": "compile_classes",
             "type": "shell",
-            "command": "compile.bat"
+            "command": "cd ${workspaceFolder}/webapps/ROOT/WEB-INF/classes/ ; start ${workspaceFolder}/webapps/ROOT/WEB-INF/classes/compile_all.bat -wait",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            },
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
